@@ -19,10 +19,6 @@ noop_SOURCES = noop.c
 noop_LDADD = $(THEORA_LIBS)
 noop_CFLAGS = $(OGG_CFLAGS)
 
-#commentexp_test_SOURCES = commentexp-test.c
-#commentexp_test_LDADD = $(THEORA_LIBS)
-#commentexp_test_CFLAGS = $(OGG_CFLAGS)
-
 comment_test_SOURCES = comment-test.c
 comment_test_LDADD = $(THEORA_LIBS)
 comment_test_CFLAGS = $(OGG_CFLAGS)
